linera-views-derive/src/snapshots/linera_views_derive__tests__test_generate_root_view_code_metrics_CustomContext_with_where.snap
---
source: linera-views-derive/src/lib.rs
expression: pretty(generate_root_view_code(input))
---
impl<MyParam> linera_views::views::RootView for TestView<MyParam>
where
    MyParam: Send + Sync + 'static,
    Self: linera_views::views::View,
{
    async fn save(&mut self) -> Result<(), linera_views::ViewError> {
        use linera_views::{
            context::Context as _, batch::Batch, store::WritableKeyValueStore as _,
            views::View as _,
        };
        #[cfg(not(target_arch = "wasm32"))]
        linera_views::metrics::increment_counter(
            &linera_views::metrics::SAVE_VIEW_COUNTER,
            stringify!(TestView),
            &self.context().base_key().bytes,
        );
        let mut batch = Batch::new();
        self.pre_save(&mut batch)?;
        if !batch.is_empty() {
            #[cfg(not(target_arch = "wasm32"))]
            let start = std::time::Instant::now();
            self.context().store().write_batch(batch).await?;
            #[cfg(not(target_arch = "wasm32"))]
            {
                let latency_ms = start.elapsed().as_secs_f64() * 1000.0;
                linera_views::metrics::SAVE_VIEW_LATENCY
                    .with_label_values(&[stringify!(TestView)])
                    .observe(latency_ms);
            }
        }
        self.post_save();
        Ok(())
    }
    async fn save_and_drop(self) -> Result<(), linera_views::ViewError> {
        use linera_views::{
            context::Context as _, batch::Batch, store::WritableKeyValueStore as _,
            views::View as _,
        };
        #[cfg(not(target_arch = "wasm32"))]
        linera_views::metrics::increment_counter(
            &linera_views::metrics::SAVE_VIEW_COUNTER,
            stringify!(TestView),
            &self.context().base_key().bytes,
        );
        let mut batch = Batch::new();
        self.pre_save(&mut batch)?;
        if !batch.is_empty() {
            #[cfg(not(target_arch = "wasm32"))]
            let start = std::time::Instant::now();
            self.context().store().write_batch(batch).await?;
            #[cfg(not(target_arch = "wasm32"))]
            {
                let latency_ms = start.elapsed().as_secs_f64() * 1000.0;
                linera_views::metrics::SAVE_VIEW_LATENCY
                    .with_label_values(&[stringify!(TestView)])
                    .observe(latency_ms);
            }
        }
        Ok(())
    }
}
