linera-views-derive/src/snapshots/linera_views_derive__tests__test_generate_save_delete_view_code_C_with_where.snap
---
source: linera-views-derive/src/lib.rs
expression: pretty(generate_save_delete_view_code(input))
---
#[linera_views::async_trait]
impl<C, MyParam> linera_views::views::RootView<C> for TestView<C, MyParam>
where
    MyParam: Send + Sync + 'static,
    C: linera_views::context::Context + Send + Sync + Clone + 'static,
    Self: Send + Sync,
{
    async fn save(&mut self) -> Result<(), linera_views::views::ViewError> {
        use linera_views::{context::Context, batch::Batch, views::View};
        let mut batch = Batch::new();
        self.register.flush(&mut batch)?;
        self.collection.flush(&mut batch)?;
        if !batch.is_empty() {
            self.context().write_batch(batch).await?;
        }
        Ok(())
    }
}
