linera-views-derive/src/snapshots/linera_views_derive__tests__test_generate_save_delete_view_code_metrics_C.snap
---
source: linera-views-derive/src/lib.rs
expression: pretty(generate_save_delete_view_code(input))
---
#[linera_views::async_trait]
impl<C> linera_views::views::RootView<C> for TestView<C>
where
    C: linera_views::context::Context + Send + Sync + Clone + 'static,
    Self: Send + Sync,
{
    async fn save(&mut self) -> Result<(), linera_views::views::ViewError> {
        use linera_views::{context::Context, batch::Batch, views::View};
        #[cfg(not(target_arch = "wasm32"))]
        linera_views::metrics::increment_counter(
            &linera_views::metrics::SAVE_VIEW_COUNTER,
            stringify!(TestView),
            &self.context().base_key(),
        );
        let mut batch = Batch::new();
        self.register.flush(&mut batch)?;
        self.collection.flush(&mut batch)?;
        if !batch.is_empty() {
            self.context().write_batch(batch).await?;
        }
        Ok(())
    }
}
